[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "varcode"
requires-python = ">=3.9"
authors = [{name = "Alex Rubinsteyn", email = "alex.rubinsteyn@unc.edu"}]
description = "Variant annotation in Python"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "varcode.version.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["varcode", "varcode.*"]

[tool.setuptools.package-data]
"varcode.cli" = ["logging.conf"]

[project.urls]
"Homepage" = "https://github.com/openvax/varcode"
"Bug Tracker" = "https://github.com/openvax/varcode/issues"

[project.scripts]
varcode-genes = "varcode.cli.genes_script:main"
varcode = "varcode.cli.effects_script:main"
