[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "varcode"
requires-python = ">=3.9"
authors = [{name = "Alex Rubinsteyn", email = "alex.rubinsteyn@unc.edu"}]
description = "Variant annotation in Python"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "varcode.version.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["varcode", "varcode.*"]

[tool.setuptools.package-data]
"varcode.cli" = ["logging.conf"]

[project.urls]
"Homepage" = "https://github.com/openvax/varcode"
"Bug Tracker" = "https://github.com/openvax/varcode/issues"

[project.scripts]
varcode-genes = "varcode.cli.genes_script:main"
varcode = "varcode.cli.effects_script:main"

[tool.pytest.ini_options]
markers = [
    "parity: parity harness for SequenceDiffEffectAnnotator (WIP #271 stage 3d, #309). Run explicitly with `pytest -m parity` once the classifier lands.",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F821", "E501", "F841", "E731", "E741", "E722", "E721"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test*/*" = ["F401"]
